# rns-rs

./: .gitignore  Cargo.toml  README.md
data/: README.md
docs/: crates-io-publish-runbook.md  esp32-release-runbook.md  finish-rns-server-implementation-plan.md  graceful-shutdown-plan.md  kernel-boundary-benchmark-2026-03-24.md  plan-announce-verification-queue.md  protocol-spec.md  rns-server-operator-runbook.md  rns-server-release-readiness.md  unified-control-plane.md  vps-deploy-runbook.md  vps-investigation-brief-2026-04-02.md  vps-production-findings-2026-03-14.md  vps-production-findings-2026-03-15.md  vps-production-findings-2026-03-16.md  vps-production-findings-2026-03-17.md  vps-production-findings-2026-03-19.md  vps-production-findings-2026-03-20-run7.md  vps-production-findings-2026-03-20.md  vps-production-findings-2026-03-22.md  vps-production-findings-2026-03-23.md  vps-production-findings-2026-03-25.md  vps-production-findings-2026-03-28.md  vps-production-findings-2026-03-29.md  vps-production-findings-2026-03-30.md  vps-production-findings-2026-03-31.md  vps-production-findings-2026-04-01.md  vps-production-findings-2026-04-02.md  vps-production-findings-2026-04-04.md  vps-production-findings-2026-04-05.md  vps-production-findings-2026-04-06.md  vps-production-findings-2026-04-08.md  vps-production-findings-2026-04-09.md  vps-reporting-runbook.md  vps-rns-server-cutover.md
rns-cli/: Cargo.toml  build.rs
rns-cli/src/: args.rs  lib.rs  readiness.rs  remote.rs  rnsd.rs  sentineld.rs  statsd.rs
rns-core/: Cargo.toml
rns-ctl/: Cargo.toml
rns-esp32/: Cargo.toml  README.md  (+2 more)
rns-hooks/: Cargo.toml
rns-hooks/benches/: hook_dispatch.rs
rns-hooks/examples/stats_scraper/: Cargo.toml  show_stats.py
rns-hooks/examples/stats_scraper/src/: lib.rs
rns-hooks/sdk/rns-hooks-abi/: Cargo.toml
rns-hooks/sdk/rns-hooks-abi/src/: context.rs  lib.rs  sentinel.rs  stats.rs
rns-hooks/sdk/rns-hooks-sdk/: Cargo.toml
rns-hooks/sdk/rns-hooks-sdk/src/: action.rs  host.rs  lib.rs
rns-hooks/src/: arena.rs  error.rs  hooks.rs  host_fns.rs  lib.rs  manager.rs  result.rs  runtime.rs
rns-hooks/tests/: integration.rs
rns-net/: Cargo.toml
rns-net/examples/: echo.rs  message.rs  repro_issue_2.rs  rnode_hil.rs  rnode_lora.rs  rnsd.rs  tcp_connect.rs
rns-net/src/: announce_cache.rs  discovery.rs  driver.rs  event.rs  ifac.rs  kiss.rs  lib.rs  management.rs  md5.rs  node.rs  pickle.rs  provider_bridge.rs  rnode_kiss.rs  rpc.rs  serial.rs  shared_client.rs  storage.rs
rns-net/src/common/: callbacks.rs  config.rs  destination.rs  discovery.rs  event.rs  interface_stats.rs  link_manager.rs  management.rs  mod.rs
rns-net/src/holepunch/: mod.rs  orchestrator.rs  probe.rs  puncher.rs  udp_direct.rs
rns-net/src/interface/: auto.rs  backbone.rs  kiss_iface.rs  local.rs  mod.rs  pipe.rs  registry.rs  rnode.rs  serial_iface.rs  tcp.rs  tcp_server.rs  udp.rs
rns-net/src/interface/i2p/: mod.rs  sam.rs
rns-net/tests/: e2e.rs  e2e_hooks.rs  python_interop.rs
rns-server/: Cargo.toml  build.rs
rns-server/src/: args.rs  config.rs  control_plane.rs  lib.rs  logs.rs  main.rs  self_exec.rs  supervisor.rs
(+142 files in other folders)
