[workspace]
members = ["rns-crypto", "rns-core", "rns-net", "rns-cli", "rns-ctl", "rns-hooks", "rns-stats-hook"]
exclude = ["rns-esp32"]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/lelloman/rns-rs"
authors = ["rns-rs contributors"]

[workspace.dependencies]
rns-crypto = { version = "0.1.4", path = "rns-crypto" }
rns-core = { version = "0.1.6", path = "rns-core" }
rns-net = { version = "0.5.2", path = "rns-net" }
rns-hooks = { version = "0.1.4", path = "rns-hooks" }

# Compile crypto crate with optimizations even in debug/test builds.
# Helps curve25519-dalek performance in debug mode.
[profile.dev.package.rns-crypto]
opt-level = 2

[profile.test.package.rns-crypto]
opt-level = 2
