[package]
name = "rns-cli"
description = "CLI tools for the Reticulum Network Stack"
version = "0.1.6"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rns-net.workspace = true
rns-core.workspace = true
rns-crypto.workspace = true
log = "0.4"
env_logger = "0.10"
libc = "0.2"

[[bin]]
name = "rnsd"
path = "src/bin/rnsd.rs"

[[bin]]
name = "rnstatus"
path = "src/bin/rnstatus.rs"

[[bin]]
name = "rnpath"
path = "src/bin/rnpath.rs"

[[bin]]
name = "rnid"
path = "src/bin/rnid.rs"

[[bin]]
name = "rnprobe"
path = "src/bin/rnprobe.rs"
