[package]
name = "rns-hooks"
description = "WASM hook system for the Reticulum Network Stack"
version = "0.1.4"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
wasmtime = "29"
log = "0.4"
rns-hooks-abi = { version = "0.1.1", path = "sdk/rns-hooks-abi" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
wat = "1"

[[bench]]
name = "hook_dispatch"
harness = false
