[package]
name = "rns-server"
description = "Batteries-included Reticulum node server"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rns-net.workspace = true
rns-ctl = { path = "../rns-ctl" }
env_logger = "0.11"
libc = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
